--- a/_data/company.yml
+++ b/_data/company.yml
@@ -1,8 +1,8 @@
-company_name: The Sheep Vote
-mission_statement: The Sheep Vote is a non-profit organisation started in 2005 by the great shepard, Wooly McBaa.
-address: 123 Example Street, City
-phone: +1 123 456 7891
-email: donate@yourwebsite.com
-facebook: CloudCannon
-twitter: CloudCannon
-youtube: CloudCannon
+company_name: GreenYouth Initiative
+mission_statement: GreenYouth Initiative works towards spreading green policies through campuses and youth organizations.
+address: Ankara, Turkey
+phone: 
+email: tobbetusdsn@gmail.com
+facebook: SDG Hub TOBB ETU
+twitter: @sdghubtobbetu
+youtube: @sdghubtobbetu
