--- a/_data/company.yml
+++ b/_data/company.yml
@@ -1,7 +1,7 @@
 company_name: GreenYouth Initiative
 mission_statement: GreenYouth Initiative works towards spreading green policies through campuses and youth organizations.
 address: Ankara, Turkey
-phone: 
+phone: +90
 email: tobbetusdsn@gmail.com
 facebook: SDG Hub TOBB ETU
 twitter: @sdghubtobbetu
