--- a/_data/company.yml
+++ b/_data/company.yml
@@ -1,8 +1,8 @@
 company_name: GreenYouth Initiative
 mission_statement: GreenYouth Initiative works towards spreading green policies through campuses and youth organizations.
 address: Ankara, Turkey
-phone: +90
+phone: 
 email: tobbetusdsn@gmail.com
-facebook: SDG Hub TOBB ETU
-twitter: @sdghubtobbetu
-youtube: @sdghubtobbetu
+facebook: sdghubtobbetu
+twitter: sdghubtobbetu
+youtube: sdghubtobbetu
